<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:background="@drawable/searchview_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cl_parent"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <TextView
            android:id="@+id/tv_commodity"
            android:layout_width="0dp"
            android:layout_weight="0.17"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:textSize="12sp"
            android:background="@color/tab_table_color"
            android:textAllCaps="true"
            android:text="@string/commodity" />

        <TextView
            android:id="@+id/tv_province"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:background="@color/tab_table_color"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:text="@string/province" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:textSize="12sp"
            android:background="@color/tab_table_color"
            android:textAllCaps="true"
            android:text="@string/city" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:background="@color/tab_table_color"
            android:textSize="12sp"
            android:text="@string/size" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="match_parent"
            android:paddingHorizontal="4dp"
            android:gravity="center"
            android:background="@color/tab_table_color"
            android:textSize="12sp"
            android:text="@string/price" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_commodity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_commodity_table"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_commodity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_baseline_add_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/sort_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="6dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sort_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/sort_and_filter"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textSize="12sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/layout_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/bottom_sheet_layout_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:gestureInsetBottomIgnored="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <include
                android:id="@+id/bottom_sheet_sort"
                layout="@layout/sort_and_filter_screen" />

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>